fix(frontend): fix modal backdrop not showing
Upgrading bootstrap from 3.2 to 3.3.1 brakes the modal backdrop:
* add CSS fix to address this until angular-bootstrap fix
* upgrade angular-bootstrap to latest 0.12.0
* various grunt and changelog edits

Close #28

--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -429,3 +429,10 @@ div.taglist div.tag-input input {
   width: 100%; 
   height: 0px; 
 }
+
+/* Addresses a bug that appears from bootstrap 3.2 to 3.3.1 upgrade */
+/* The modal background was not dark shaed */
+/* TODO: remove when angular-bootstrap fixes */
+.modal-backdrop {
+  bottom: 0;
+}
